--- a/css/globals.less
+++ b/css/globals.less
@@ -99,26 +99,25 @@ ul, p {
 /* social media 
 */
  a.social {
-    width: 60px; 
-    height: 60px; 
+    width: 30px; 
+    height: 30px; 
     display: inline-block; 
-    .transform(scale(0.5));
-    margin: -15px; //because of the transform
+    background-size: 90px;
     &.twitter {
-        background-position: 120px 0px;
+        background-position: 60px 0px;
         &:hover {
-            background-position: 120px 60px;
+            background-position: 60px 30px;
         }
     }
     &.google {
         &:hover {
-            background-position: 0px 60px;
+            background-position: 0px 30px;
         }
     }
     &.facebook {
-        background-position: 60px 0px;
+        background-position: 30px 0px;
         &:hover {
-            background-position: 60px 60px;
+            background-position: 30px 30px;
         }
     }
 }
